fix header appearance on smaller screens

--- a/src/style.scss
+++ b/src/style.scss
@@ -114,13 +114,18 @@ header {
     }
   }
 
-  @media screen and (max-width: 500px) {
+  @media screen and (max-width: 550px) {
     padding-inline: 1.5rem;
+    text-align: center;
+    display: block;
     gap: 0;
 
     nav {
+      display: flex;
+      justify-content: center;
+      gap: 0.9rem;
       font-size: 1rem;
-      gap: 0.5rem;
+      padding-block: 1.25rem;
     }
   }
 }
@@ -253,16 +258,4 @@ button {
 // hide CLS
 web-vitals dl div:first-of-type {
   display: none;
-}
-
-@media screen and (max-width: 300px) {
-  header {
-    nav {
-      justify-content: space-between;
-    }
-
-    button {
-      display: none;
-    }
-  }
 }
